--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <!-- <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"> -->
+    <!-- <link rel="shortcut icon" href="assets/images/favicon.PNG" type="image/PNG"> -->
         
     <!--====== Slick CSS ======-->
     <link rel="stylesheet" href="assets/css/slick.css">
@@ -75,7 +75,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo_1.png" alt="Logo">
+                                <img src="assets/images/logo_1.PNG" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -133,7 +133,7 @@
             </div> <!-- container -->
             <div class="header-hero-image d-flex align-items-center wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="1.1s">
                 <div class="image">
-                    <img src="assets/images/poster.png" alt="Hero Image">
+                    <img src="assets/images/poster.PNG" alt="Hero Image">
                 </div>
             </div> <!-- header hero image -->
         </div> <!-- header hero -->
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="about-image mt-60 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="assets/images/poster.png" alt="about">
+                        <img src="assets/images/poster.PNG" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
@@ -235,7 +235,7 @@
                     <div class="col-lg-4 col-md-7">
                         <div class="single-service d-flex">
                             <div class="service-icon">
-                                <img src="assets/images/service-1.png" alt="Icon">
+                                <img src="assets/images/service-1.PNG" alt="Icon">
                             </div>
                             <div class="service-content media-body">
                                 <h4 class="service-title">Highly Experienced Doctor</h4>
@@ -252,7 +252,7 @@
                     <div class="col-lg-4 col-md-7">
                         <div class="single-service service-border d-flex">
                             <div class="service-icon">
-                                <img src="assets/images/service-2.png" alt="Icon">
+                                <img src="assets/images/service-2.PNG" alt="Icon">
                             </div>
                             <div class="service-content media-body">
                                 <h4 class="service-title">Modern Equipment</h4>
@@ -266,7 +266,7 @@
                     <div class="col-lg-4 col-md-7">
                         <div class="single-service d-flex">
                             <div class="service-icon">
-                                <img src="assets/images/service-3.png" alt="Icon">
+                                <img src="assets/images/service-3.PNG" alt="Icon">
                             </div>
                             <div class="service-content media-body">
                                 <h4 class="service-title">Quality Service</h4>
@@ -310,10 +310,10 @@
                 <div class="col-lg-4 col-sm-6 grid-item apps creative laptop">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/portfolio-1.png" alt="protfolio">
+                            <img src="assets/images/portfolio-1.PNG" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/portfolio-1.png">
+                            <a class="image-popup" href="assets/images/portfolio-1.PNG">
                                 <span></span>
                             </a>
                         </div>
@@ -322,10 +322,10 @@
                 <div class="col-lg-4 col-sm-6 grid-item branding creative">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/protfolio-2.png" alt="protfolio">
+                            <img src="assets/images/protfolio-2.PNG" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/protfolio-2.png">
+                            <a class="image-popup" href="assets/images/protfolio-2.PNG">
                                 <span></span>
                             </a>
                         </div>
@@ -502,7 +502,7 @@
     
    
     <!--====== CONTACT PART START ======-->
-    <!-- <div class="IQ1KEb" jslog="56034; track:impression,click"><a href="https://www.google.com/maps/place/MY+ARogyam/data=!3m1!4b1!4m2!3m1!1s0x3bcb86193859960f:0xd9dd3d19064d20a5" target="_blank" itemprop="hasMap" data-tracking-element-type="7"><div class="QMbmRe" style="background-image:url(assets/images/map.png)" title="Map showing business location."></div></a></div> -->
+    <!-- <div class="IQ1KEb" jslog="56034; track:impression,click"><a href="https://www.google.com/maps/place/MY+ARogyam/data=!3m1!4b1!4m2!3m1!1s0x3bcb86193859960f:0xd9dd3d19064d20a5" target="_blank" itemprop="hasMap" data-tracking-element-type="7"><div class="QMbmRe" style="background-image:url(assets/images/map.PNG)" title="Map showing business location."></div></a></div> -->
 
     <section id="contact" class="contact-area pt-120 pb-120">
         <div class="container">
@@ -602,7 +602,7 @@
                     <div class="col-lg-3 col-sm-6 order-sm-1 order-lg-1">
                         <div class="footer-about pt-40">
                             <a href="#">
-                                <img src="assets/images/logo_1.png" alt="Logo">
+                                <img src="assets/images/logo_1.PNG" alt="Logo">
                             </a>Among the finest Homeopathic Doctors in the city, My Arogyam in Medchal, Rangareddy, Hyderabad is known for offering excellent patient care. The clinic is located centrally in Medchal, a prominent locality in the city.</p> <p class="text">There is no dearth of public modes of transport to reach the clinic from all major areas of the city.</p>
                         </div> <!-- footer about -->
                     </div>
