--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <div class="col-lg-4 col-md-7">
                         <div class="single-service d-flex">
                             <div class="service-icon">
-                                <img src="assets/images/service-1.PNG" alt="Icon">
+                                <img src="assets/images/service-1.png" alt="Icon">
                             </div>
                             <div class="service-content media-body">
                                 <h4 class="service-title">Highly Experienced Doctor</h4>
@@ -252,7 +252,7 @@
                     <div class="col-lg-4 col-md-7">
                         <div class="single-service service-border d-flex">
                             <div class="service-icon">
-                                <img src="assets/images/service-2.PNG" alt="Icon">
+                                <img src="assets/images/service-2.png" alt="Icon">
                             </div>
                             <div class="service-content media-body">
                                 <h4 class="service-title">Modern Equipment</h4>
@@ -266,7 +266,7 @@
                     <div class="col-lg-4 col-md-7">
                         <div class="single-service d-flex">
                             <div class="service-icon">
-                                <img src="assets/images/service-3.PNG" alt="Icon">
+                                <img src="assets/images/service-3.png" alt="Icon">
                             </div>
                             <div class="service-content media-body">
                                 <h4 class="service-title">Quality Service</h4>
